<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewMeetingActivity"
    android:orientation="vertical">

    <EditText
        android:id="@+id/add_meeting_title"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="text"
        android:hint="@string/new_meeting_title"
        android:layout_margin="15dp"/>

    <EditText
        android:id="@+id/add_meeting_description"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="text"
        android:hint="@string/new_meeting_description"
        android:layout_margin="15dp"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_a_starting_time"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"/>

    <TimePicker
        android:id="@+id/add_meeting_date"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:timePickerMode="spinner"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_an_utc"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"/>

    <Spinner
        android:id="@+id/add_meeting_utc"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:entries="@array/utc_array"/>

</LinearLayout>