<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="horizontal">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/main_color"
        android:text="@string/cancel"
        android:background="@android:color/transparent"
        android:layout_weight="1"
        android:onClick="onCancelCreateElem"/>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/appTitle"
        style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/main_color"
        android:text="@string/create_member"
        android:layout_weight="1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/main_color"
        android:text="@string/save"
        android:background="@android:color/transparent"
        android:layout_weight="1"
        android:onClick="onCreateElem"/>

</android.support.v7.widget.LinearLayoutCompat>